--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "practice-zone",
+  "name": "stacks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^2.5.0",
+    "@react-three/drei": "^7.0.2",
+    "@react-three/fiber": "^7.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "leva": "^0.9.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.129.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
