--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cannon-es": "^0.18.0",
     "leva": "^0.9.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
