--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leva": "^0.9.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "three": "^0.129.0",
     "uuid": "^8.3.2",
