camera rotates now back to origin position when play again

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-spring/three": "^9.2.3",
+    "@react-spring/web": "^9.2.3",
     "@react-three/cannon": "^2.5.0",
     "@react-three/drei": "^7.0.2",
     "@react-three/fiber": "^7.0.1",
