--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "cannon-es": "^0.18.0",
+    "firebase": "^8.7.1",
     "leva": "^0.9.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
